correccion rutas estaticos

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,7 +10,7 @@
         <!-- FONT-AWESOME -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <!-- CSS -->
-        <link rel="stylesheet" href="../public/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <title>Login</title>
     </head>
 
@@ -18,7 +18,7 @@
     <header class="main-header">
         <div class="top-header">
             <!-- <div class="logo"> -->
-            <img src="../public/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
+            <img src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
             <!-- </div> -->
             <div class="form" action="#" method="GET">
                 <div class="input">Buscar productos, marcas y más</div>
@@ -34,7 +34,7 @@
                 <li><a href="">Ayuda</a></li>
             </ul>
             <ul class="nav-login">
-                <li><a href="./register.html">Creá tu cuenta</a><i class="far fa-id-card"></i></li>
+                <li><a href="/register">Creá tu cuenta</a><i class="far fa-id-card"></i></li>
                 <li><a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
                 <li><a href="">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
             </ul>
