--- a/src/views/product.html
+++ b/src/views/product.html
@@ -10,14 +10,14 @@
         <!-- FONT-AWESOME -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <!-- CSS -->
-        <link rel="stylesheet" href="../public/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <title>Productos</title>
     </head>
 <body>
     <header class="main-header">
         <div class="top-header">
             <!-- <div class="logo"> -->
-                <img src="../public/images/logo-mercado-liebre.svg">
+                <img src="/images/logo-mercado-liebre.svg">
             <!-- </div> -->
             <div class="form" action="#" method="GET">
                 <div class="input">Buscar productos, marcas y más</div>
@@ -47,7 +47,7 @@
     </div>
     <main>
         <div class="container-img">
-            <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="imagen-producto">
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen-producto">
         </div>
         <div class="container-info-product">
             <div class="form group">
