--- a/src/views/home.html
+++ b/src/views/home.html
@@ -10,14 +10,14 @@
     <!-- FONT-AWESOME -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Home</title>
 </head>
 <body>
     <header class="main-header">
         <div class="top-header">
             <!-- <div class="logo"> -->
-                <img src="../public/images/logo-mercado-liebre.svg">
+                <img src="/images/logo-mercado-liebre.svg">
             <!-- </div> -->
             <div class="form" action="#" method="GET">
                 <div class="input">Buscar productos, marcas y más</div>
@@ -44,12 +44,12 @@
     </header>
     <main>
         <div class="img-banner">
-            <img src="../public/images/img-home-banner.jpg" alt="img-home-banner">
+            <img src="/images/img-home-banner.jpg" alt="img-home-banner">
         </div>
         <section>
             <h2 class="section-title">Basado en tu última visita</h2>
         <article>
-            <img src="../public/images/img-cafetera-moulinex.jpg" alt="imagen-cafetera-moulinex">
+            <img src="/images/img-cafetera-moulinex.jpg" alt="imagen-cafetera-moulinex">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$6.770 </p> 
@@ -58,7 +58,7 @@
         </div>
         </article>
         <article>
-            <img src="../public/images/img-macbook-pro-2019.jpg" alt="imagen-macbook">
+            <img src="/images/img-macbook-pro-2019.jpg" alt="imagen-macbook">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$230.000 </p>
@@ -67,7 +67,7 @@
         </div>
         </article>
         <article>
-            <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="imagen-samsung-galaxy">
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen-samsung-galaxy">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$70.500 </p>
@@ -76,7 +76,7 @@
             </div>
         </article>
         <article>
-            <img src="../public/images/img-tv-samsung-smart.jpg" alt="imagen-smart-tv-samsung">
+            <img src="/images/img-tv-samsung-smart.jpg" alt="imagen-smart-tv-samsung">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$23.200 </p> 
@@ -88,7 +88,7 @@
         <section>
         <h2 class="section-title">Ofertas</h2>
             <article>
-            <img src="../public/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+            <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$6.770 </p> 
@@ -97,7 +97,7 @@
         </div>
         </article>
         <article>
-            <img src="../public/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+            <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$230.000 </p>
@@ -106,7 +106,7 @@
         </div>
         </article>
         <article>
-            <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$70.500 </p>
@@ -115,7 +115,7 @@
         </div>
         </article>
         <article>
-            <img src="../public/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+            <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
             <div class="bg-white">
             <i class="fas fa-truck"></i>
             <p class = "price">$23.200 </p> 
