--- a/src/views/register.html
+++ b/src/views/register.html
@@ -10,7 +10,7 @@
         <!-- FONT-AWESOME -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <!-- CSS -->
-        <link rel="stylesheet" href="../public/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <title>Registro</title>
     </head>
 
@@ -18,7 +18,7 @@
     <header class="main-header">
         <div class="top-header">
             <!-- <div class="logo"> -->
-            <img src="../public/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
+            <img src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
             <!-- </div> -->
             <div class="form" action="#" method="GET">
                 <div class="input">Buscar productos, marcas y más</div>
